relay-runtime tests in place

--- a/types/react-relay/tsconfig.json
+++ b/types/react-relay/tsconfig.json
@@ -19,6 +19,8 @@
     },
     "files": [
         "index.d.ts",
-        "react-relay-tests.tsx"
+        "react-relay-tests.tsx",
+        "react-relay-classic-tests.tsx",
+        "react-relay-compat-tests.tsx"
     ]
 }
