--- a/types/react-relay/tsconfig.json
+++ b/types/react-relay/tsconfig.json
@@ -19,8 +19,6 @@
     },
     "files": [
         "index.d.ts",
-        "react-relay-tests.tsx",
-        "react-relay-classic-tests.tsx",
-        "react-relay-compat-tests.tsx"
+        "react-relay-tests.tsx"
     ]
 }
