--- a/types/lunr/v0/tsconfig.json
+++ b/types/lunr/v0/tsconfig.json
@@ -7,10 +7,13 @@
         "noImplicitAny": true,
         "noImplicitThis": false,
         "strictNullChecks": false,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
+        "paths": {
+            "lunr": ["lunr/v0"]
+        },
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
