--- a/types/storejs/v1/tsconfig.json
+++ b/types/storejs/v1/tsconfig.json
@@ -8,11 +8,16 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": true,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
         "types": [],
+        "paths": {
+            "storejs": [
+                "storejs/v1"
+            ]
+        },
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
