Add separate tests for the global exports

--- a/types/big.js/tsconfig.json
+++ b/types/big.js/tsconfig.json
@@ -17,6 +17,7 @@
     },
     "files": [
         "index.d.ts",
-        "big.js-tests.ts"
+        "test/big.js-module-tests.ts",
+        "test/big.js-global-tests.ts"
     ]
 }
