Fixes definitions to match reality. (#19800)
Return type on ignore function was missing and Promise return type was missing from overloads that didn't take a callback.  Also extracts out a helper type definitions and provides slightly better variable naming for the transient `recursiveReadDir`.

--- a/types/recursive-readdir/v1/tsconfig.json
+++ b/types/recursive-readdir/v1/tsconfig.json
@@ -1,17 +1,19 @@
 {
     "compilerOptions": {
-        "target": "es2015",
         "module": "commonjs",
         "lib": [
             "es6"
         ],
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
-        "baseUrl": "../",
+        "strictNullChecks": false,
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
+        "paths": {
+            "recursive-readdir": [ "recursive-readdir/v1" ]
+        },
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
