Add Feather icons to react-native-vector-icons (#19995)
* Add Feather icons to react-native-vector-icons

* Bump react-native-vector-icons version number

* Add Feather.d.ts to react-native-vector-icons tsconfig

* Rename Feather.ts to Feather.d.ts in react-native-vector-icons

--- a/types/react-native-vector-icons/tsconfig.json
+++ b/types/react-native-vector-icons/tsconfig.json
@@ -22,6 +22,7 @@
     "Icon.d.ts",
     "Entypo.d.ts",
     "EvilIcons.d.ts",
+    "Feather.d.ts",
     "FontAwesome.d.ts",
     "Foundation.d.ts",
     "Ionicons.d.ts",
