--- a/types/next/tsconfig.json
+++ b/types/next/tsconfig.json
@@ -19,6 +19,12 @@
     },
     "files": [
         "index.d.ts",
+        "document.d.ts",
+        "dynamic.d.ts",
+        "error.d.ts",
+        "head.d.ts",
+        "link.d.ts",
+        "router.d.ts",
         "test/next-tests.ts",
         "test/next-error-tests.tsx",
         "test/next-head-tests.tsx",
