--- a/types/loglevel/tsconfig.json
+++ b/types/loglevel/tsconfig.json
@@ -1,4 +1,4 @@
-{
+{ 
     "compilerOptions": {
         "module": "commonjs",
         "lib": [
@@ -17,6 +17,7 @@
     },
     "files": [
         "index.d.ts",
-        "loglevel-tests.ts"
+        "test/loglevel-tests.ts",
+        "test/loglevel-umd-tests.ts"
     ]
 }
