--- a/types/react-relay/v1/tsconfig.json
+++ b/types/react-relay/v1/tsconfig.json
@@ -18,7 +18,9 @@
         "jsx": "react",
         "paths": {
             "react-relay": ["react-relay/v1"],
-            "react-relay/*": ["react-relay/v2/*"]
+            "react-relay/*": ["react-relay/v1/*"],
+            "react-relay/classic": ["react-relay/v1/classic.d"],
+            "react-relay/compat": ["react-relay/v1/compat.d"]
         }
     },
     "files": [
