Update the Atom type definitions. (#20146)
* Update the Atom type definitions.

* Atom: support additional dtslint rules. Minor fixes to definitions.

* Atom: enable unified signatures for dtslint.

* Atom: fix the scan and replace functions. Enable ban-types in dtslint.

* Atom: enable no-declare-current-package and no-single-declare-module.

--- a/types/atom-keymap/v5/tsconfig.json
+++ b/types/atom-keymap/v5/tsconfig.json
@@ -8,16 +8,20 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": false,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
+        "paths": {
+            "atom-keymap": [ "atom-keymap/v5" ],
+            "event-kit": [ "event-kit/v1" ]
+        },
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "status-bar-tests.ts"
+        "atom-keymap-tests.ts"
     ]
 }
