--- a/types/first-mate/v4/tsconfig.json
+++ b/types/first-mate/v4/tsconfig.json
@@ -8,16 +8,20 @@
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": false,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
+        "paths": {
+          "event-kit": [ "event-kit/v1" ],
+          "first-mate": [ "first-mate/v4" ]
+        },
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "status-bar-tests.ts"
+        "first-mate-tests.ts"
     ]
 }
