--- a/types/pathwatcher/v0/tsconfig.json
+++ b/types/pathwatcher/v0/tsconfig.json
@@ -2,22 +2,25 @@
     "compilerOptions": {
         "module": "commonjs",
         "lib": [
-            "es6",
-            "dom"
+            "es6"
         ],
         "noImplicitAny": true,
         "noImplicitThis": true,
         "strictNullChecks": false,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
+        "paths": {
+            "pathwatcher": [ "pathwatcher/v0" ],
+            "q": [ "q/v0" ]
+        },
         "types": [],
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
-        "status-bar-tests.ts"
+        "pathwatcher-tests.ts"
     ]
 }
