--- a/types/webpack-merge/v0/tsconfig.json
+++ b/types/webpack-merge/v0/tsconfig.json
@@ -6,12 +6,16 @@
         ],
         "noImplicitAny": true,
         "noImplicitThis": true,
-        "strictNullChecks": true,
-        "baseUrl": "../",
+        "strictNullChecks": false,
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
         "types": [],
+        "paths": {
+            "webpack-merge": ["webpack-merge/v0"],
+            "webpack-merge/*": ["webpack-merge/v0/*"]
+        },
         "noEmit": true,
         "forceConsistentCasingInFileNames": true
     },
