--- a/types/actions-on-google/tsconfig.json
+++ b/types/actions-on-google/tsconfig.json
@@ -20,7 +20,7 @@
         "index.d.ts",
         "assistant-app.d.ts",
         "actions-sdk-app.d.ts",
-        "api-ai-app.d.ts",
+        "dialogflow-app.d.ts",
         "response-builder.d.ts",
         "transactions.d.ts",
         "actions-on-google-tests.ts"
