[Relay] Fix dtslint issues with test files.

--- a/types/react-relay/tsconfig.json
+++ b/types/react-relay/tsconfig.json
@@ -19,10 +19,10 @@
     },
     "files": [
         "index.d.ts",
-        "react-relay-tests.tsx",
-        "react-relay-classic-tests.tsx",
         "classic.d.ts",
         "modern.d.ts",
-        "compat.d.ts"
+        "compat.d.ts",
+        "test/react-relay-tests.tsx",
+        "test/react-relay-classic-tests.tsx"
     ]
 }
