--- a/types/serialport/v4/tsconfig.json
+++ b/types/serialport/v4/tsconfig.json
@@ -8,9 +8,9 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
-        "baseUrl": "../",
+        "baseUrl": "../../",
         "typeRoots": [
-            "../"
+            "../../"
         ],
         "paths": {
             "serialport": ["serialport/v4"]
@@ -21,6 +21,6 @@
     },
     "files": [
         "index.d.ts",
-        "firmata-tests.ts"
+        "serialport-tests.ts"
     ]
 }
