--- a/types/atom/tsconfig.json
+++ b/types/atom/tsconfig.json
@@ -20,8 +20,8 @@
     "files": [
         "index.d.ts",
         "atom-tests.ts",
-        "autocomplete-plus.d.ts",
-        "linter.d.ts",
-        "status-bar.d.ts"
+        "autocomplete-plus/index.d.ts",
+        "linter/index.d.ts",
+        "status-bar/index.d.ts"
     ]
 }
