--- a/types/vuex-i18n/tsconfig.json
+++ b/types/vuex-i18n/tsconfig.json
@@ -16,8 +16,7 @@
         "noImplicitThis": true,
         "strictNullChecks": true,
         "strictFunctionTypes": true,
-        "forceConsistentCasingInFileNames": true,
-        "version": 2.3
+        "forceConsistentCasingInFileNames": true
     },
     "files": [
         "index.d.ts",
